--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@types/jest": "24.0.15",
     "@types/node": "12.6.2",
     "@types/react": "16.8.23",
+    "@types/react-csv": "^1.1.1",
     "@types/react-dom": "16.8.4",
     "react": "^16.8.6",
+    "react-csv": "^1.1.1",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "typescript": "3.5.3"
