--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "typescript": "3.5.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm run tailwind && react-scripts start",
+    "build": "npm run tailwind && react-scripts build",
+    "tailwind": "tailwind build src/styles/tailwind.src.css -c src/tailwind.js -o src/styles/tailwind.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "tslint -c tslint.json src/**/*.{ts,tsx} --format verbose"
@@ -37,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "tailwindcss": "^1.0.5",
     "tslint": "^5.18.0",
     "tslint-react": "^4.0.0"
   }
